<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/first_team_name"
                style="@style/EditTextTeamNameStyle"
                android:cursorVisible="true"
                android:focusable="true"
                android:hint="@string/team"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:nextFocusForward="@id/second_team_name" />

            <TextView
                android:id="@+id/first_team_score"
                style="@style/TeamScoreStyle"
                android:text="@string/score_view" />

            <Button
                style="@style/ScoreButtonStyle"
                android:layout_marginBottom="@dimen/button_margin"
                android:layout_marginTop="@dimen/button_margin"
                android:onClick="goalForFirstTeam"
                android:text="@string/goal_for_first_team" />

            <TextView
                android:id="@+id/first_team_fault"
                style="@style/TeamStatisticStyle"
                android:paddingTop="@dimen/fault_score_padding_top"
                android:text="@string/score_view" />

            <Button
                style="@style/ScoreButtonStyle"
                android:layout_marginBottom="@dimen/button_margin"
                android:onClick="faultForFirstTeam"
                android:text="@string/fault_for_first_team" />

            <TextView
                android:id="@+id/first_team_penalty"
                style="@style/TeamStatisticStyle"
                android:text="@string/score_view" />

            <Button
                style="@style/ScoreButtonStyle"
                android:onClick="penaltyForFirstTeam"
                android:text="@string/penalty_for_first_team" />

            <TextView
                android:id="@+id/first_team_corner"
                style="@style/TeamStatisticStyle"
                android:text="@string/score_view" />

            <Button
                style="@style/ScoreButtonStyle"
                android:onClick="cornerForFirstTeam"
                android:text="@string/corner_for_first_team" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/view_margin_top"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/second_team_name"
                style="@style/EditTextTeamNameStyle"
                android:cursorVisible="true"
                android:focusable="true"
                android:hint="@string/team"
                android:imeOptions="actionDone"
                android:inputType="textCapSentences" />

            <TextView
                android:id="@+id/second_team_score"
                style="@style/TeamScoreStyle"
                android:text="@string/score_view" />

            <Button
                style="@style/ScoreButtonStyle"
                android:layout_marginBottom="@dimen/button_margin"
                android:layout_marginTop="@dimen/button_margin"
                android:onClick="goalForSecondTeam"
                android:text="@string/goal_for_second_team" />

            <TextView
                android:id="@+id/second_team_fault"
                style="@style/TeamStatisticStyle"
                android:paddingTop="@dimen/fault_score_padding_top"
                android:text="@string/score_view" />

            <Button
                style="@style/ScoreButtonStyle"
                android:layout_marginBottom="@dimen/button_margin"
                android:onClick="faultForSecondTeam"
                android:text="@string/fault_for_second_team" />

            <TextView
                android:id="@+id/second_team_penalty"
                style="@style/TeamStatisticStyle"
                android:text="@string/score_view" />

            <Button
                style="@style/ScoreButtonStyle"
                android:onClick="penaltyForSecondTeam"
                android:text="@string/penalty_for_second_team" />

            <TextView
                android:id="@+id/second_team_corner"
                style="@style/TeamStatisticStyle"
                android:text="@string/score_view" />

            <Button
                style="@style/ScoreButtonStyle"
                android:onClick="cornerForSecondTeam"
                android:text="@string/corner_for_second_team" />

        </LinearLayout>

    </LinearLayout>

    <Button
        style="@style/NewGameButtonStyle"
        android:onClick="newGame"
        android:text="@string/new_game" />

</RelativeLayout>
